# HBUT-Apple-

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: sync-ics.yml  validate-cookie.yml
config/: calendar_meta.json  periods.json  term.json
docs/: index.html
src/hbut_timetable/: __init__.py  check_cookie.py  cli.py  expand.py  ics.py  models.py  parser.py  sync.py
tests/: test_expand.py  test_ics.py  test_parser.py  test_sync_failures.py  test_sync_html_then_api.py  test_sync_success.py
tests/fixtures/: README.md  query_page_minimal.html  sample_payload.json  sdpkkbList_payload.json
