[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hbut-timetable-ics"
version = "0.1.0"
description = "Sync HBUT timetable to an ICS feed for Apple Calendar subscriptions"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "HBUT Student"}]
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
hbut-sync = "hbut_timetable.cli:main"
hbut-check-cookie = "hbut_timetable.check_cookie:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
